welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:4: error: type mismatch;
 found   : Unit
 required: Int
  while(i<nums.length-1){
  ^